# OpenCockpit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  installrequirements.sh  link_utili.txt
CarCockpit/: CMakeLists.txt  CarCockpit.cpp  CarCockpit.h  GenerateHeaders.sh
CarCockpit/src/: CarCockpit.cpp
OpenCockpit/: CMakeLists.txt
OpenCockpit/src/: CarCockpit.cpp
